<resources>
    <string name="app_name">eCommerce</string>
    <string name="motto">Discover Choose and Buy cheap and quality products</string>
    <string name="already">Already have an Account? Log in</string>
    <string name="remember">Remember Me</string>
    <string name="forgot">Forgot Password?</string>
    <string name="login">Log In </string>
    <string name="password">Password</string>
    <string name="link1">I am an Admin?</string>
    <string name="link2">I am not an Admin?</string>
    <string name="remejmber">Remember Me</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="register">Register Now</string>
    <string name="LOGOUT">logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="product_name">Product Name</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_seller_home">SellerHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
