<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".Buyers.MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="192dp"
        android:layout_height="107dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/applogo"
        />
    <TextView
        android:layout_width="220dp"
        android:id="@+id/app_slogan"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="140dp"
       android:text="@string/motto"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="397dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="109dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/already"
        android:textAllCaps="false"
        android:textColor="@android:color/black"

        android:textSize="18sp" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="397dp"
        android:layout_height="74dp"
        android:layout_above="@+id/loginButton"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/seller_begin"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="9dp"
        android:text="Register/Log In  as A Seller"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"

        />

</RelativeLayout>