<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Buyers.LoginActivity"
    >

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:scaleType="centerCrop"
        android:src="@drawable/sellers" />
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:text="Seller Log IN  Form"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_below="@id/img_seller"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content">


    </TextView>
    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="enter your email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"

        />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="number"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="393dp"
        android:layout_height="64dp"
        android:layout_below="@id/login_password"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:gravity="center_vertical"
            android:text="@string/remember"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/forgot"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold"

            />


    </LinearLayout>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout1"
        android:layout_marginStart="15dp"
        android:layout_marginTop="57dp"
        android:background="@color/colorPrimaryDark"
        android:text="Create Account"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="15sp"

        android:textStyle="bold" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_link"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="42dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:text="Log In As a Seller"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>